--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -73,3 +73,11 @@
   selected={false},
   preview={cairn.png}
 }
+
+@book{translation,
+  title={Translation of "The Great Convergence: Information Technology and the New Globalization" to Chinese},
+  author={Richard Baldwin; Translator: Xiaojie Liu},
+  year={2020},
+  publisher={Gezhi Ltd},
+  html={https://product.dangdang.com/29163881.html}
+}
