--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -79,6 +79,7 @@
   author={Author: Richard Baldwin; Translator: Xiaojie Liu},
   year={2020},
   publisher={Gezhi Ltd},
-  html={https://product.dangdang.com/29163881.html}
-  preview={translation.png}
+  html={https://product.dangdang.com/29163881.html},
+  preview={translation.png},
+  note = {Other Activities}
 }
