--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,12 +2,12 @@
 ---
 
 @article{JMP,
-  title={Consumer Search, Information Frictions and Monetary Non-Neutrality},
+  title={Information Asymmetry and Monetary Non-Neutrality: A Sequential Search Approach},
   school={Northwestern University},
   author={Xiaojie Liu},
   year={2024},
   note={Job Market Paper},
-  abstract={This paper develops a model of monetary non-neutrality driven solely by consumer-side frictions, complementing the standard approach that relies on firm-side pricing frictions. I introduce two frictions: (i) search frictions on the good market and (ii) information frictions regarding aggregate shocks. The interplay of two frictions causes demand for individual good to depend on belief-adjusted relative prices. As a result, the passthrough of aggregate shocks to price index is incomplete. The key mechanism is that, following a monetary policy shock, consumers attribute some of the resulting price changes to firm idiosyncratic shocks, inducing them to search for alternatives. To mitigate search, firms, particularly high-productivity ones, limit the extent to which they pass the shock through to prices. Empirically, I show significant increase in the number of shopping trips in a consumer panel during periods of high inflation. Additionally, I validate the model's prediction that regions with higher search frictions exhibit lower passthrough of shocks by proposing a novel measure of county-level search frictions and constructing MSA-level price indices. Finally, I show that the model demonstrates substantial monetary non-neutrality under realistic calibration.}, 
+  abstract={This paper develops a model of monetary non-neutrality driven by information asymmetry about marginal costs in a sequential search framework. With only consumer-side frictions, this approach is distinguished from the standard one that relies on firm-side pricing frictions. Information asymmetry causes demand for individual good to depend on perceived relative price. As a result, the passthrough of aggregate shocks to prices is incomplete. The key mechanism is that, following a monetary shock, consumers attribute some of the resulting price changes to firms' idiosyncratic shocks, inducing them to search for alternatives. To dissuade search, firms limit the extent to which they pass the shock through to prices. Consistent with the mechanism, higher inflation is associated empirically with measures of more active consumer search. Additionally, I develop a measure for county-level search frictions and show that regions with higher search frictions exhibit lower passthrough of shocks. Calibration of the model further demonstrates substantial monetary non-neutrality.}, 
   selected={true},  
   preview={JMP.png}
 }
