--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,7 +10,8 @@
   abstract={This paper develops a model of monetary non-neutrality driven by information asymmetry between consumers and firms about nominal marginal costs in a sequential search framework. With only consumer-side frictions, this approach is distinguished from the standard one that relies on firm-side pricing frictions. Under incomplete information, consumers' perceived price distribution determines their subjective value of search. As a result, firm's elasticity of demand depends on shoppers' expectation of the price index. The passthrough of aggregate shocks to prices is therefore incomplete. The key mechanism is that, following a monetary shock, consumers attribute some of the resulting price changes to firm-specific adverse shocks, inducing them to search for alternatives. To dissuade search, firms compress the markup and limit the passthrough of the shock. Furthermore, the Phillips curve shows that the monetary non-neutrality is proportional to the nowcast error of inflation. Despite its parsimonious nature, the calibrated model can generate substantial monetary non-neutrality. Consistent with the mechanism, higher inflation is associated empirically with more active consumer search, and regions with higher search frictions exhibit lower passthrough.}, 
   selected={true},  
   preview={JMP.png},
-  pdf={https://drive.google.com/file/d/1Rc3YK025uMu3x0MP58II6LoVVz-oscPq/view?usp=sharing}
+  link={https://drive.google.com/file/d/1Rc3YK025uMu3x0MP58II6LoVVz-oscPq/view?usp=sharing},
+  pdf = {JMP_Xiaojie.pdf}
 }
 
 @article{AER Ben,
