--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,8 +14,7 @@
 }
 
 @article{AER Ben,
-  title={A Framework for Economic Growth with Capital-Embodied Technical Change
-},
+  title={A Framework for Economic Growth with Capital-Embodied Technical Change},
   author={Benjamin Jones and Xiaojie Liu},
   year={2024},
   journal={American Economic Review},
