--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,14 +2,15 @@
 ---
 
 @article{JMP,
-  title={Consumer Search, Information Frictions and Monetary Non-Neutrality},
+  title={Information Asymmetry and Monetary Non-Neutrality: A Sequential Search Approach},
   school={Northwestern University},
   author={Xiaojie Liu},
   year={2024},
   note={Job Market Paper},
-  abstract={ This paper develops a model of monetary non-neutrality driven solely by consumer-side frictions, complementing the standard approach that relies on firm-side pricing frictions. We introduce two frictions: (i) search frictions on the good market and (ii) information frictions regarding aggregate shocks. The interplay of two frictions causes demand for individual good to depend on belief-adjusted relative prices. As a result, the passthrough of aggregate shocks to price index is incomplete. The key mechanism is that, following a monetary policy shock, consumers attribute some of the resulting price changes to firm idiosyncratic shocks, inducing them to search for alternatives. To mitigate search, firms, particularly high-productivity ones, limit the extent to which they pass the shock through to prices. Extensions and links to the literature are discussed. In the second half of the paper, we construct a novel measure of county-level search frictions and MSA-level price indices to empirically validate the model’s comparative statics. The results indicate that regions with higher search frictions exhibit lower passthrough of shocks, consistent with the model’s predictions. Finally, we show that the model demonstrates substantial monetary non-neutrality under realistic calibration.},
+  abstract={ This paper develops a model of monetary non-neutrality driven by information asymmetry between consumers and firms about nominal marginal costs in a sequential search framework. With only consumer-side frictions, this approach is distinguished from the standard one that relies on firm-side pricing frictions. Consumers’ value of search is determined by their information about the price index, and firm’s elasticity of demand depends on the perceived relative price. The passthrough of aggregate shocks to prices is therefore incomplete. The key mechanism is that, following a monetary shock, consumers attribute some of the resulting price changes to firm-specific adverse shocks, inducing them to search for alternatives. To dissuade search, firms compress the markup and limit the passthrough of the shock. I further show that the output gap is proportional to the nowcast error of inflation in the Phillips curve. Despite its parsimonious nature, the calibrated dynamic general equilibrium model can generate substantial monetary non-neutrality. Consistent with the mechanism, higher inflation is associated empirically with more active consumer search.},
   selected={true},
   preview={JMP.png}
+  pdf={JMP_Xiaojie.pdf}
 }
 
 @article{AER Ben,
