--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,7 @@
   author={Xiaojie Liu},
   year={2024},
   note={Job Market Paper},
-  abstract={ This paper develops a model of monetary non-neutrality driven by information asymmetry between consumers and firms about nominal marginal costs in a sequential search framework. With only consumer-side frictions, this approach is distinguished from the standard one that relies on firm-side pricing frictions. Consumers’ value of search is determined by their information about the price index, and firm’s elasticity of demand depends on the perceived relative price. The passthrough of aggregate shocks to prices is therefore incomplete. The key mechanism is that, following a monetary shock, consumers attribute some of the resulting price changes to firm-specific adverse shocks, inducing them to search for alternatives. To dissuade search, firms compress the markup and limit the passthrough of the shock. I further show that the output gap is proportional to the nowcast error of inflation in the Phillips curve. Despite its parsimonious nature, the calibrated dynamic general equilibrium model can generate substantial monetary non-neutrality. Consistent with the mechanism, higher inflation is associated empirically with more active consumer search.},
+  abstract={This paper develops a model of monetary non-neutrality driven by information asymmetry between consumers and firms about nominal marginal costs in a sequential search framework. With only consumer-side frictions, this approach is distinguished from the standard one that relies on firm-side pricing frictions. Consumers’ value of search is determined by their information about the price index, and firm’s elasticity of demand depends on the perceived relative price. The passthrough of aggregate shocks to prices is therefore incomplete. The key mechanism is that, following a monetary shock, consumers attribute some of the resulting price changes to firm-specific adverse shocks, inducing them to search for alternatives. To dissuade search, firms compress the markup and limit the passthrough of the shock. I further show that the output gap is proportional to the nowcast error of inflation in the Phillips curve. Despite its parsimonious nature, the calibrated dynamic general equilibrium model can generate substantial monetary non-neutrality. Consistent with the mechanism, higher inflation is associated empirically with more active consumer search.},
   selected={true},
   preview={JMP.png},
   pdf={JMP_Xiaojie 112224.pdf}
@@ -31,8 +31,9 @@
   year={2024},
   note={Working Paper},
   abstract={We investigate inflation dynamics when firms are uncertain about the causes of aggregate fluctuations and use prices and output as learning tools. During periods of low inflation, firms observing increased output attribute this change partly to positive demand and partly to positive supply factors, resulting in a dampened pricing response. Consequently, demand shocks are near non-inflationary. On the contrary, supply shocks are strongly inflationary, given that supply shocks directly change firms' marginal cost while expectations about aggregate inflation and output is dampened. As inflation escalates, firms raise prices in response to either perceived positive demand or negative supply shocks, triggering a self-fulfilling cycle of de-anchored inflation. Supported by survey evidence, our model can generate realistic monetary non-neutrality and explains occasional inflation de-anchoring. This model explains the business cycle puzzle of inflation disconnect and flattened Phillips curve, and also offers new insights into inflation dynamics and monetary policy implications.},
+  selected={false},
   preview={confusion.png},
-  pdf = {Firm_Confidence_and_the_Propagation_of_Demand_Shocks_in_the_New_Keynesian_Model.pdf}
+  pdf={Firm_Confidence_and_the_Propagation_of_Demand_Shocks_in_the_New_Keynesian_Model.pdf}
 }
 
 @article{Complementarity,
@@ -40,7 +41,7 @@
   author={Xiaojie Liu},
   year={2024},
   note={Working Paper},
-  abstract={ Strategic complementarities in firm price setting are crucial in shaping macroeconomic outcomes. This paper offers the first empirical estimate of retailers’ price responses to competitor price changes, leveraging large-scale Nielsen data on prices and sales. To address reverse endogeneity, we introduce a novel instrumental variable strategy based on DellaVigna and Gentzkow (2020). In contrast to Amiti, Itskhoki, and Konings (2019), who show strong complementarity in the manufacturing sector, we find weaker evidence of strategic complementarity, with a typical firm adjusting its price with an elasticity of 0.14 in response to competitors’ price changes. To explain this discrepancy, we develop a theoretical framework that incorporates two buyer-side frictions: (i) search frictions and (ii) information frictions regarding sectoral shocks. Our findings indicate that strategic complementarity is highly sensitive to the level of information frictions. Finally, we provide suggestive evidence that buyers in the retail sector, typically households, may have less information on sectoral shocks.},
+  abstract={Strategic complementarities in firm price setting are crucial in shaping macroeconomic outcomes. This paper offers the first empirical estimate of retailers’ price responses to competitor price changes, leveraging large-scale Nielsen data on prices and sales. To address reverse endogeneity, we introduce a novel instrumental variable strategy based on DellaVigna and Gentzkow (2020). In contrast to Amiti, Itskhoki, and Konings (2019), who show strong complementarity in the manufacturing sector, we find weaker evidence of strategic complementarity, with a typical firm adjusting its price with an elasticity of 0.14 in response to competitors’ price changes. To explain this discrepancy, we develop a theoretical framework that incorporates two buyer-side frictions: (i) search frictions and (ii) information frictions regarding sectoral shocks. Our findings indicate that strategic complementarity is highly sensitive to the level of information frictions. Finally, we provide suggestive evidence that buyers in the retail sector, typically households, may have less information on sectoral shocks.},
   selected={false},
   preview={complement in pricing.png}
 }
