--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,7 +10,7 @@
   abstract={This paper develops a model of monetary non-neutrality driven by information asymmetry between consumers and firms about nominal marginal costs in a sequential search framework. With only consumer-side frictions, this approach is distinguished from the standard one that relies on firm-side pricing frictions. Consumers’ value of search is determined by their information about the price index, and firm’s elasticity of demand depends on the perceived relative price. The passthrough of aggregate shocks to prices is therefore incomplete. The key mechanism is that, following a monetary shock, consumers attribute some of the resulting price changes to firm-specific adverse shocks, inducing them to search for alternatives. To dissuade search, firms compress the markup and limit the passthrough of the shock. I further show that the output gap is proportional to the nowcast error of inflation in the Phillips curve. Despite its parsimonious nature, the calibrated dynamic general equilibrium model can generate substantial monetary non-neutrality. Consistent with the mechanism, higher inflation is associated empirically with more active consumer search.},
   selected={true},
   preview={JMP.png},
-  pdf={JMP_Xiaojie 112224.pdf}
+  pdf={JMP_Xiaojie.pdf}
 }
 
 @article{AER Ben,
