--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -82,6 +82,7 @@
   year={2020},
   publisher={Gezhi Ltd},
   html={https://product.dangdang.com/29163881.html},
+  selected={false},
   preview={translation.png},
   note = {Other Activities}
 }
