--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -37,6 +37,18 @@
   pdf={Firm_Confidence_and_the_Propagation_of_Demand_Shocks_in_the_New_Keynesian_Model.pdf}
 }
 
+@article{pricing frictions and innovation,
+  title={Pricing Frictions and Innovation},
+  author={Xiaojie Liu and Sara Moreira},
+  year={2024},
+  note={Working in Progress},
+  abstract={This paper studies the relationship between pricing and product innovation decisions. Using detailed product- and firm-level data, we find new evidence of price frictions in incumbent products over their life cycle and their association with product innovation rates and the price levels of new products. Our findings suggest that the nominal price of an existing product barely increases over the long term. Instead, the rise in the nominal price index is largely driven by the introduction of new products. Firms tend to charge a high price premium on new products, a phenomenon we term ”price overshooting”. We develop a dynamic endogenous growth model within a monetary economy and demonstrate that, in an environment with pricing frictions,  the option value of setting a new price incentivizes firms to innovate. Anticipating price rigidity over a product’s life cycle, firms overshoot prices at the initial stage of product introduction.},
+  selected={false},
+  preview={pricing and innovation.png},
+  pdf = {Pricing friction and innovation.pdf}
+}
+
+
 @article{Complementarity,
   title={Strategic Complementarity in Price Setting: Evidence from Retail Industry},
   author={Xiaojie Liu},
@@ -45,16 +57,6 @@
   abstract={Strategic complementarities in firm price setting are crucial in shaping macroeconomic outcomes. This paper offers the first empirical estimate of retailers’ price responses to competitor price changes, leveraging large-scale Nielsen data on prices and sales. To address reverse endogeneity, we introduce a novel instrumental variable strategy based on DellaVigna and Gentzkow (2020). In contrast to Amiti, Itskhoki, and Konings (2019), who show strong complementarity in the manufacturing sector, we find weaker evidence of strategic complementarity, with a typical firm adjusting its price with an elasticity of 0.14 in response to competitors’ price changes. To explain this discrepancy, we develop a theoretical framework that incorporates two buyer-side frictions: (i) search frictions and (ii) information frictions regarding sectoral shocks. Our findings indicate that strategic complementarity is highly sensitive to the level of information frictions. Finally, we provide suggestive evidence that buyers in the retail sector, typically households, may have less information on sectoral shocks.},
   selected={false},
   preview={complement in pricing.png}
-}
-
-@article{pricing frictions and innovation,
-  title={Pricing Frictions and Innovation},
-  author={Xiaojie Liu and Sara Moreira},
-  year={2024},
-  note={Working in Progress},
-  abstract={This paper studies the relationship between pricing and product innovation decisions. Using detailed product- and firm-level data, we find new evidence of price frictions in incumbent products over their life cycle and their association with product innovation rates and the price levels of new products. Our findings suggest that the nominal price of an existing product barely increases over the long term. Instead, the rise in the nominal price index is largely driven by the introduction of new products. Firms tend to charge a high price premium on new products, a phenomenon we term ”price overshooting”. We develop a dynamic endogenous growth model within a monetary economy and demonstrate that, in an environment with pricing frictions,  the option value of setting a new price incentivizes firms to innovate. Anticipating price rigidity over a product’s life cycle, firms overshoot prices at the initial stage of product introduction.},
-  selected={false},
-  preview={pricing and innovation.png}
 }
 
 @article{ben skill biased,
