--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -76,7 +76,8 @@
   note={Working in Progress},
   abstract={Caplin and Spulber (1987) famously argue that price stickiness disappears in the aggregate if the “right” firms change the prices in the menu cost economies. We present a mechansim that makes monetary non-neutrality disappears in time-dependent price adjustment models, which serves a counterpart to Caplin and Spulber (1987). In particular, we incorporates price dispersion into an otherwise standard New Keynesian model and demonstrate that monetary non-neutrality can be negligible even when only small fraction of firms adjust prices. The key mechanism is that adjustable firms create price-setting externalities for other firms: they alter demand across the price distribution such that prices remain optimal even for non-adjusting firms within the range suggested by a mixed pricing strategy. Following a positive (negative) monetary shock, only a negligible fraction of firms on the left (right) tail of the price distribution deviate from optimal pricing, resulting in negligible monetary non-neutrality.},
   selected={false},
-  preview={cairn.png}
+  preview={cairn.png},
+  pdf = {Time-Dependent Price Adjustment and the Neutrality of Money.pdf}
 }
 
 @book{translation,
