--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -45,7 +45,7 @@
   abstract={This paper studies the relationship between pricing and product innovation decisions. Using detailed product- and firm-level data, we find new evidence of price frictions in incumbent products over their life cycle and their association with product innovation rates and the price levels of new products. Our findings suggest that the nominal price of an existing product barely increases over the long term. Instead, the rise in the nominal price index is largely driven by the introduction of new products. Firms tend to charge a high price premium on new products, a phenomenon we term ”price overshooting”. We develop a dynamic endogenous growth model within a monetary economy and demonstrate that, in an environment with pricing frictions,  the option value of setting a new price incentivizes firms to innovate. Anticipating price rigidity over a product’s life cycle, firms overshoot prices at the initial stage of product introduction.},
   selected={false},
   preview={pricing and innovation.png},
-  pdf = {Pricing friction and innovation.pdf}
+  pdf = {}
 }
 
 
