--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 
 @article{JMP,
-  title={Information Asymmetry and Monetary Non-Neutrality: A Sequential Search Approach},
+  title={Information Asymmetry and Monetary Non-Neutrality: A Sequential Search Approach (will present in SED 2025!)},
   school={Northwestern University},
   author={Xiaojie Liu},
   year={2024},
