--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,7 @@
   author={Xiaojie Liu},
   year={2024},
   note={Job Market Paper},
-  abstract={This paper develops a dynamic general equilibrium model of monetary non-neutrality driven solely by consumer-side search and information frictions, in contrast to standard frameworks that rely on firm-side nominal rigidities.  Consumers incur search costs and possess incomplete information about average nominal marginal costs. The key mechanism is that, following a monetary shock, consumers attribute some of the resulting price changes to firm-specific adverse shocks, inducing them to search for alternatives. To dissuade search, firms compress the markup and limit the passthrough of the shock to prices. This mechanism operates through the attenuation of strategic complementarities in pricing due to information frictions. The model is tractable and can be efficiently solved using sequence-space methods. Using impulse-response matching, I estimate the degree of information friction to be substantial, accounting for a significant share of observed monetary non-neutrality. I further extend the model to incorporate aggregate productivity shocks and apply it to the post-pandemic inflation surge. Finally, I provide two pieces of empirical evidence that support the model’s core mechanisms.},
+  abstract={This paper develops a dynamic general equilibrium model of monetary non-neutrality driven solely by consumer-side search and information frictions, in contrast to standard frameworks that rely on firm-side nominal rigidities.  Consumers face search frictions on the goods market and possess incomplete information about average nominal marginal costs. The key mechanism is that, following a monetary shock, consumers attribute some of the resulting price changes to firm-specific adverse shocks, inducing them to search for alternatives. To dissuade search, firms compress the markup and limit the passthrough of the shock to prices. This mechanism operates through the attenuation of strategic complementarities in pricing due to information frictions. The model is tractable and can be efficiently solved using sequence-space methods. Using impulse-response matching, I estimate the degree of information friction to be substantial, accounting for a significant share of observed monetary non-neutrality. I further extend the model to incorporate aggregate productivity shocks and apply it to the post-pandemic inflation surge. Finally, I provide two pieces of empirical evidence that support the model’s core mechanisms.},
   selected={true},
   preview={JMP.png},
   pdf={JMP_Xiaojie.pdf}
