--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,7 +10,7 @@
   abstract={This paper develops a model of monetary non-neutrality driven solely by consumer-side information frictions, in contrast to standard approaches that rely on firm-side nominal rigidities.  Consumers face search frictions when shopping for goods and have imperfect information about the average nominal marginal cost. The key mechanism is that, following a monetary shock, consumers attribute some of the resulting price changes to firm-specific adverse shocks, inducing them to search for alternatives. To dissuade search, firms compress the markup and limit the passthrough of the shock to prices. Firms still pass through idiosyncratic shocks flexibly, while responses to aggregate shocks are dampened due to weakened strategic complementarities by consumers' information friction. Building on this mechanism, I develop a tractable medium-scale DSGE model that can be efficiently solved using sequence-space methods. Estimating the model via impulse response matching, I find the degree of information friction to be substantial, accounting for 65% of observed monetary non-neutrality. I further consider aggregate productivity shocks and apply it to interpret the post-pandemic inflation surge. Finally, I provide two pieces of empirical evidence that support the model’s core mechanisms.},
   selected={true},
   preview={JMP.png},
-  pdf={JMP_Xiaojie.pdf}
+  pdf={https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5271515}
 }
 
 @article{AER Ben,
