--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 
 @article{JMP,
-  title={Consumer Information Friction and Monetary Non-Neutrality: A Sequential Search Approach (Updated in May 2025!)},
+  title={Consumer Information Friction and Monetary Non-Neutrality: A Sequential Search Approach (presented in SED 2025)},
   school={Northwestern University},
   author={Xiaojie Liu},
   year={2024},
@@ -26,14 +26,14 @@
 }
 
 @article{Confusion,
-  title={Confusion, Phillips Curves and De-anchored Inflation},
+  title={Demand or Supply? Expectations and Inflation under Confusion (New Version!)},
   author={Xiaojie Liu and Dalton Zhang},
   year={2024},
   note={Working Paper},
-  abstract={We investigate inflation dynamics when firms are uncertain about the causes of aggregate fluctuations and use prices and output as learning tools. During periods of low inflation, firms observing increased output attribute this change partly to positive demand and partly to positive supply factors, resulting in a dampened pricing response. Consequently, demand shocks are near non-inflationary. On the contrary, supply shocks are strongly inflationary, given that supply shocks directly change firms' marginal cost while expectations about aggregate inflation and output is dampened. As inflation escalates, firms raise prices in response to either perceived positive demand or negative supply shocks, triggering a self-fulfilling cycle of de-anchored inflation. Supported by survey evidence, our model can generate realistic monetary non-neutrality and explains occasional inflation de-anchoring. This model explains the business cycle puzzle of inflation disconnect and flattened Phillips curve, and also offers new insights into inflation dynamics and monetary policy implications.},
+  abstract={How do agents respond when the origins of macroeconomic shocks are uncertain? We develop a theory of confusion between aggregate shocks. When inflation signals are more informative, agents mistake negative supply shocks for positive demand shocks—negative confusion. When output signals dominate, positive confusion arises. In New Keynesian models, negative confusion amplifies inflation after supply shocks via strategic price complementarity and muted expectations of real wage declines, while positive confusion reverses both channels and dampens inflation.  Estimating the model pre- and post-1990 reveals a shift from inflation- to output-based inference, reconciling three empirical puzzles: (i) the Phillips curve’s flattening post-1990 and steepening during the pandemic; (ii) a pronounced “supply view,” a negative relations between expected output and inflation; and (iii) the inflation–output disconnect, wherein the two variables appear driven by distinct shocks.},
   selected={false},
   preview={confusion.png},
-  pdf={Firm_Confidence_and_the_Propagation_of_Demand_Shocks_in_the_New_Keynesian_Model.pdf}
+  pdf={https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5104088}
 }
 
 @article{pricing frictions and innovation,
